aplicaciones/app1-kustomize/envs/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-kustomize-go-web-app-deployment
spec:
  replicas: 3
