aplicaciones/app1-kustomize/envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-kustomize-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /pocs/prod/app1-kustomize
        pathType: Prefix
        backend:
          service:
            name: app1-kustomize-service
            port:
              number: 8080
